--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,114 @@ input.percent__input {
   transition: all .4;
 }
 
+/** Стили для модального окна ==================================================*/
+
+.popup {
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
+  transition: all 0.8s ease 0s;
+}
+
+.popup.open {
+    opacity: 1;
+    visibility: visible;
+}
+
+.popup.open .popup__content {
+    transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
+    opacity: 1;
+}
+
+.popup__body {
+  min-height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 10px;
+  transition: all 0.8s ease 0s;
+}
+
+.popup__content {
+  background-color: #eff7ff;
+  color: #333333;
+  max-width: 800px;
+  padding: 85px 65px;
+  position: relative;
+  transition: all 0.8s ease 0s;
+  opacity: 0;
+  transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
+}
+
+.popup__close {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/close.png);
+  background-size: cover;
+}
+
+  
+.popup__title {
+  font-family: Gilroy;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 40px;
+  margin: 0px 0px 15px 0px;
+
+}
+
+.poput__subtitle {
+  font-family: Gilroy;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 28px;
+  margin: 0px 0px 50px 0px;
+}
+
+  .poput__block {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 0px -10px;
+  }
+
+.popup__block--item {
+  flex: 1 1 50%;
+  padding: 0px 10px;
+}
+
+
+.popup__politic {
+  color: #999999;
+  font-family: Gilroy;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.popup__politic--link {
+  text-decoration: underline;
+}
+
+.input {
+  background-color: #ffffff;
+  border-radius: 5px;
+  margin: 0px 0px 20px 0px;
+  padding: 25px 25px;
+  width: 100%;
+}
+
 
   
 
